# vibeproxy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  create-app-bundle.sh  dev-live-reload.sh  simple-live-reload.sh  update-cli-proxy.sh
.github/workflows/: cross-platform-test.yml  linux-build.yml  update-cliproxyapi.yml
apps/linux/: Cargo.toml  README.md
apps/linux/src/: app.rs  config_manager.rs  keyring.rs  main.rs  server_manager.rs  system_tray.rs  ui.rs
apps/macos/: NOTIFICATION_FIX.md  Package.swift
apps/macos/Sources/: AppDelegate.swift  AuthStatus.swift  BackendClient.swift  CLIProxyAPI.swift  ConfigManager.swift  GatewayProvider.swift  NodeGraphModels.swift  RemoteProfileView.swift  RuleCanvas.swift  RulePalette.swift  RustCoreManager.swift  (+5 more)
apps/windows/: VibeProxy.sln  WINDOWS_TESTING_GUIDE.md
docs/: README.md
docs/architecture/: MONOREPO_MIGRATION.md  SERVICES_CONFIG.md
docs/guides/: DUAL_ROUTER.md  WINDOWS_UI.md
docs/reference/: CHANGELOG.md  COMPLETION_SUMMARY.md  FORK_ATTRIBUTION.md  MIGRATION_COMPLETE.md
docs/setup/: DEV_SETUP.md  INJECT_SETUP.md
proto/: config.proto
scripts/: build-all.sh  build-core.sh  build-linux.sh  build-macos.sh  build-windows.ps1
src/: Info.plist  Package.swift
src/Sources/: AuthStatus.swift  CLIProxyAPI.swift  GatewayProvider.swift  GatewaySettingsView.swift  NodeConfigPanel.swift  RemoteProfileManager.swift  RuleModels.swift  RuleNodeView.swift  SLMManager.swift  ServerManager.swift  ServiceDiscoveryManager.swift  SettingsView.swift  SimpleVisualRulesEditor.swift  VisualNodeProgrammer.swift
(+22 files in other folders)
